@@ -1,3 +1,14 @@
+2015-11-10  Daniel Hawkins
+	* doc/scripts/levels-extract.pl: Created a new level extraction tool
+	  for the documentation that works with modern server code and
+	  is utilized for both html and latex outputs.
+	* doc/playbook/Makefile.am: Point to the new perl script for level extraction.
+	* doc/playbook/levels-extract: Removed. It was designed to find a hardcoded
+	  exp table in living.c.
+	* doc/playbook-html/Makefile.am: Point to the new perl script for level extraction.
+	* doc/playbook-html/levels-extract: Removed. It was designed to find a hardcoded
+	  exp table in living.c.
+
 2015-05-31  Daniel Hawkins
 	* common/living.c: Fixed a bug introduced in r19972 that made skill
 	  experience based off total level instead of skill level.
